--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@
 }
 
 .cards {
+    position: relative;
     float: left;
     margin-right: 33px;
 }
@@ -115,6 +116,8 @@
     background-color: rgba(251, 251, 251, 1);
     width: 258px;
     height: 300px;
+    position: relative;
+    overflow: hidden;
 }
 
 .text-cards {
@@ -157,4 +160,35 @@
     font-size: 18px;
     font-weight: 700;
     transition: 0.1s;
+}
+
+.card-hover {
+    display: flex;
+    justify-content: center;
+    gap: 26px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -37px;
+    transition: 0.2s;
+}
+
+.cards:hover .card-hover {
+    bottom: 7px;
+}
+
+.cards::before {
+    content: "";
+    height: 2px;
+    background-color: rgba(70, 163, 88, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    z-index: 1;
+}
+
+.cards:hover::before {
+    display: block;
 }
